fix: width scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@
 
 /* scrollbar */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
     height: 5px;
 }
 
